--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Kaushik Bhadane</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>kaushikbhadaner@gmail.com</span></li>
-		            	<li class="d-flex"><span>Phone: </span> <span>+91-9049998692</span></li>
+		            	<!--<li class="d-flex"><span>Phone: </span> <span></span></li>-->
 		            </ul>
 		          </div>
 		        </div>
@@ -788,15 +788,15 @@
         </div>
 
         <div class="row d-flex contact-info mb-5">
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <!--<div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a>+91-9049998692</a></p>
+	            <p><a></a></p>
 	          </div>
-          </div>
+          </div>-->
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
