added dummy phone

--- a/index.html
+++ b/index.html
@@ -788,19 +788,19 @@
         </div>
 
         <div class="row d-flex contact-info mb-5">
-          <!--<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a></a></p>
+	            <p><a>+91 1234567890</a></p>
 	          </div>
-          </div>-->
+          </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
           	<div class="align-self-stretch box p-4 text-center">
           		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-paper-plane"></span>
+          			<span class="icon-envelope"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
 	            <p><a href="mailto:kaushikbhadaner@gmail.com">kaushikbhadaner@gmail.com</a></p>
