changed about me and added new cert

--- a/index.html
+++ b/index.html
@@ -112,12 +112,7 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p class="text-justify">Computer Engineering student at MIT Academy of Engineering, Alandi, Pune. 
-						Passionate to work in the Cybersecurity domain and have a working knowledge of python. 
-						I have experience working in Linux and well versed with security tools and practices. 
-						Continuously learning and improving in Cybersecurity skills. Looking for a role in an 
-						organization that can expand my learning, skills and knowledge by contributing my best for the 
-						development of the organization and becoming an asset to it.</p>
+		            <p class="text-justify">I am currently enrolled as a Computer Engineering student at MIT Academy of Engineering in Alandi, Pune. My passion lies in the field of Cybersecurity, and I possess a knowledge of Python and have practical experience with Linux, as well as proficiency in various security tools and practices. I am dedicated to continuously enhancing my Cybersecurity abilities and making valuable contributions to the workplace. Additionally, I hold an ISO 27001:2022 certification as an ISMS Auditor.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Kaushik Bhadane</span></li>
 		            	<li class="d-flex"><span>Email:</span> <span>kaushikbhadaner@gmail.com</span></li>
@@ -290,6 +285,17 @@
         </div>
     		<div class="row">
 					<div class="col-md-4 text-center d-flex ftco-animate">
+						<a href="documents/ISO certificate.pdf" target="_blank"  class="services-1">
+							<br>
+							<div class="desc">
+								<h2 class="mb-5">ISO/IEC 27001:2022 ISMS LA</h2>
+							</div>
+							<div class="desc">
+								<h3 class="mb-5">May 2023</h3>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-4 text-center d-flex ftco-animate">
 						<a href="documents/NPTEL Cloud Computing Certificate.pdf" target="_blank" class="services-1">
 							<br>
 							<br>
@@ -379,17 +385,6 @@
 							</div>
 							<div class="desc">
 								<h3 class="mb-5">July 2021</h3>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="documents/OS & you.pdf" target="_blank"  class="services-1">
-							<br>
-							<div class="desc">
-								<h2 class="mb-5">OS and You: Becoming a Power User (Google)</h2>
-							</div>
-							<div class="desc">
-								<h3 class="mb-5">April 2020</h3>
 							</div>
 						</a>
 					</div>
@@ -546,7 +541,7 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
+            <h2 class="mb-4">My Projects</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
