--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 		<br>
 		<div class="row justify-content-center pb-5">
 			<div class="col-md-10 heading-section text-justify ftco-animate">
-				<h1 class="big big-2 text-center">Achievements</h1>
-				<h2 class="mb-4 text-center">Achievements</h2>
+				<h1 class="big big-2 text-center">Publications</h1>
+				<h2 class="mb-4 text-center">Publications</h2>
 			</div>
 		</div>
 		<div class="row">
