added blogs link

--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Blog</h3>
-	            <p><a href="#blog-section">Blogspot.com</a></p>
+	            <p><a href="https://www.blogger.com/profile/09415768785297832455">Blogspot.com</a></p>
 	          </div>
           </div>
 		  <div class="col-md-6 col-lg-3 d-flex ftco-animate">
