--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	          <!--<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>-->
 	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <!-- <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li> -->
+	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>Blogs</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -49,7 +49,7 @@
 	  </nav>
 	  <!-- <section id="home-section" class="hero">
 		  <div class="home-slider owl-carousel">
-	      <div class="slider-item ">
+	      <div class="slider-item ">''
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
@@ -656,70 +656,65 @@
     </section>
 
 
-    <!-- <section class="ftco-section" id="blog-section">
+    <section class="ftco-section" id="blog-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
-            <h1 class="big big-2">Blog</h1>
-            <h2 class="mb-4">Our Blog</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <h1 class="big big-2">Blogs</h1>
+            <h2 class="mb-4">My Blogs</h2>
+            <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>-->
           </div>
         </div>
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
+              <a href="https://it-cybersecurity-audit-overview.blogspot.com/" class="block-20" style="background-image: url('images/image_1.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+	                	<span class="mr-2">April 03, 2023</span>
 	                </p>
                 </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading"><a href="https://it-cybersecurity-audit-overview.blogspot.com/">Protecting Your Business: An overview of IT and Cybersecurity Audits.</a></h3>
+                <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
+              <a href="https://secure-network-architecture.blogspot.com/" class="block-20" style="background-image: url('images/image_2.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+	                	<span class="mr-2">May 02, 2023</span>
 	                </p>
                 </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading"><a href="https://secure-network-architecture.blogspot.com/">The ABCs of a Secure Network Architecture: Components You Need to Keep Your Data Safe!</a></h3>
+                <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
+              <a href="https://siem-and-soar.blogspot.com/" class="block-20" style="background-image: url('images/image_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
 	                <p class="mb-0">
-	                	<span class="mr-2">June 21, 2019</span>
-	                	<a href="#" class="mr-2">Admin</a>
-	                	<a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a>
+	                	<span class="mr-2">May 09, 2023</span>
+	                	
 	                </p>
                 </div>
-                <h3 class="heading"><a href="single.html">Why Lead Generation is Key for Business Growth</a></h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+                <h3 class="heading"><a href="https://siem-and-soar.blogspot.com/">Defending Against Cyber Threats: An Overview of SIEM and SOAR Solutions.</a></h3>
+                <!-- <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p> -->
               </div>
             </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!--<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container">
